--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -43,6 +43,7 @@
   body {
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
+    font-family: 'Poppins', sans-serif;
   }
   
   /* Custom scrollbar */
